# epuzzles

./: .gitignore  Makefile.am  autogen.sh  configure.ac  epuzzles.rc  puzzles.but
data/: Makefile.am  epuzzles-n516.ini  epuzzles.ini  epuzzles.rc
debian/: changelog  control  epuzzles-extra.install  epuzzles.install  rules
desktops/: Makefile.am  bridges.desktop  fifteen.desktop  flip.desktop  pegs.desktop  rect.desktop  slant.desktop  solo.desktop  twiddle.desktop  unequal.desktop
help/: cs.po  de.po  en.po  epuzzles.pot  es.po  nl.po  pl.po  ru.po  uk.po
help/bridges/ru/: index.help
help/bridges/uk/: index.help
help/epuzzles/en/: bridges.help  flip.help  pegs.help  twiddle.help
help/epuzzles/ru/: bridges.help  fifteen.help  flip.help  solo.help  twiddle.help
help/epuzzles/uk/: bridges.help  flip.help
help/fifteen/en/: index.help
help/fifteen/ru/: index.help
help/fifteen/uk/: index.help
help/flip/en/: index.help
help/pegs/ru/: index.help
help/pegs/uk/: index.help
help/solo/en/: index.help
help/solo/ru/: index.help
help/solo/uk/: index.help
help/twiddle/en/: index.help
help/twiddle/ru/: index.help
help/twiddle/uk/: index.help
po/: Makefile.am  POTFILES  cs.po  epuzzles.pot  es.po  pl.po  ru.po  uk.po  zh_CN.po
src/: Makefile.am  battery.c  custom_drawable.c  custom_drawable.h  draw.c  frontend.h  gamelist.c  gui_util.c  gui_util.h  help.c  holder.c  holder.h  keyb.c  main.c  sprites.c  sprites.h  timer.c  util.c  zebra.c  zebra.h
src/puzzles/: Makefile.am  bridges.c  drawing.c  fifteen.c  flip.c  midend.c  pegs.c  puzzles.h  rect.c  slant.c  solo.c  twiddle.c  unequal.c
theme/: Makefile.am  epuzzle.edc  epuzzle.edj  no-footer.edc
theme/sprites/bridges/: Makefile.am
theme/sprites/fifteen/: Makefile.am
theme/sprites/pegs/: Makefile.am
theme/sprites/twiddle/: Makefile.am
